# aria2-gui

./: README.md  io.github.idevecore.Aria2GUI.Devel.json  io.github.idevecore.Aria2GUI.json  meson.build
data/: io.github.idevecore.Aria2GUI.desktop.in.in  io.github.idevecore.Aria2GUI.gschema.xml.in  meson.build
po/: POTFILES  meson.build
src/: aria2-gui.gresource.xml  aria2-gui.in  define.in  main.py  meson.build  window.blp  window.py
src/assets/: styles.css
src/components/: __init__.py
src/components/shortcuts/: shortcuts.blp  shortcuts.py
src/components/theme_selector/: theme_selector.py
